; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_urtw.c_urtw_write16_c.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/wlan/extr_if_urtw.c_urtw_write16_c.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.urtw_softc = type { i32 }
%struct.usb_device_request = type { i32, i32, i32, i32, i32 }

@UT_WRITE_VENDOR_DEVICE = common dso_local global i32 0, align 4
@URTW_8187_SETREGS_REQ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.urtw_softc*, i32, i32)* @urtw_write16_c to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @urtw_write16_c(%struct.urtw_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.urtw_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.usb_device_request, align 4
  store %struct.urtw_softc* %0, %struct.urtw_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.urtw_softc*, %struct.urtw_softc** %4, align 8
  %9 = call i32 @URTW_ASSERT_LOCKED(%struct.urtw_softc* %8)
  %10 = load i32, i32* @UT_WRITE_VENDOR_DEVICE, align 4
  %11 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %7, i32 0, i32 4
  store i32 %10, i32* %11, align 4
  %12 = load i32, i32* @URTW_8187_SETREGS_REQ, align 4
  %13 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %7, i32 0, i32 3
  store i32 %12, i32* %13, align 4
  %14 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %7, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %5, align 4
  %17 = and i32 %16, 255
  %18 = or i32 %17, 65280
  %19 = call i32 @USETW(i32 %15, i32 %18)
  %20 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %7, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* %5, align 4
  %23 = ashr i32 %22, 8
  %24 = and i32 %23, 3
  %25 = call i32 @USETW(i32 %21, i32 %24)
  %26 = getelementptr inbounds %struct.usb_device_request, %struct.usb_device_request* %7, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @USETW(i32 %27, i32 4)
  %29 = load %struct.urtw_softc*, %struct.urtw_softc** %4, align 8
  %30 = call i32 @urtw_do_request(%struct.urtw_softc* %29, %struct.usb_device_request* %7, i32* %6)
  ret i32 %30
}

declare dso_local i32 @URTW_ASSERT_LOCKED(%struct.urtw_softc*) #1

declare dso_local i32 @USETW(i32, i32) #1

declare dso_local i32 @urtw_do_request(%struct.urtw_softc*, %struct.usb_device_request*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
